--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 html{
-    font-size: 15px;
+    font-size: 20px;
     scroll-behavior: smooth;
 }
 
@@ -27,5 +27,21 @@ a {
 }
 
 .containter-fluid{
-    
+    width: 100%;
+    max-width: 150rem;
+    margin: auto;
+    padding: 2rem;
+
+}
+
+
+/* Header */
+
+.header{
+    width: 100%;
+    position: fixed;
+    top: 0;
+    height: 9rem;
+    z-index: 1;
+    background-color: gray
 }
